# IOTProtoclMachine

./: CMakeLists.txt  README.MD  SaveFiledevices.amdb  main.cpp
Include/: CommandHandler.h  ProtocolLoad.h  ProtocolSave.h  SerialPort.h  User.h
SaveFile/: device.amdb
Test/: test1.cpp  test1.h
Tools/: CommandHandler.cpp  ProtocolLoad.cpp  ProtocolSave.cpp  SerialPort.cpp  User.cpp
